# drdo-drone-challenge

./: .gitignore  README.md  mav.parm  mav.tlog  mav.tlog.raw
aruco_detector/: CMakeLists.txt  Instructions.txt  aruco_marker.world  package.xml  start.sh  start2.sh
aruco_detector/scripts/: detectAruco.py
aruco_detector/src/: detectAruco.py
code-stash/handling-pointcloud/: 3d_laser_heatmap.py  create_cloud.py  euclidean_cloud.py  xyz_pointcloud.py
drdo-exploration/: CMakeLists.txt  package.xml
drdo-exploration/scripts/: explorer.py
drdo_exploration/: CMakeLists.txt  package.xml  start_sim.sh
drdo_exploration/launch/: launch_nodes.launch  launch_world.launch
drdo_exploration/msg/: aruco_detect.msg  direction.msg  frame.msg
drdo_exploration/scripts/: aaaaa.py  explorer.py  helper.py  helper2.py  move_to_targ.py  safe_move.py  scanner.py  surveil_revise.py  survey.py  takeoff.py  test_mask.py  transformation.py
drdo_exploration/worlds/: testing_world3.world
drone_path_planner/: CMakeLists.txt  aruco.py  package.xml
drone_path_planner/msg/: teleopData.msg
drone_path_planner/script/: movement.py
drone_path_planner/scripts/: back_track.py  graph.py  movement.py  safe_move.py
installation/: README.md
interiit21/: CMakeLists.txt  mav.parm  mav.tlog  mav.tlog.raw  package.xml  start_sim.sh
interiit21/launch/: apm.launch  interiit_world1.launch  launch_nodes.launch
interiit21/models/: mav.parm  mav.tlog  mav.tlog.raw
interiit21/worlds/: aruco_marker.world  interiit_world1.world  interiit_world2.world  interiit_world2c.world  test.world  (+3 more)
(+13 files in other folders)
